--- a/COVID_Sustainability_Global.Rmd
+++ b/COVID_Sustainability_Global.Rmd
@@ -82,14 +82,15 @@ colnames(wsd.latest)[2:31] <- paste(colnames(wsd.latest)[2:31], "latest", sep = 
 table(as.factor(wsd.latest$Year_latest)) # see yr frequencies
 ```
 
+Values averaged across 2016-2018; only includes countries with da. 
+
 ```{r}
 # 3-yr averages for numeric
 wsd.3yr.num <- wsd %>% arrange(Year) %>%
+  filter(Year >= 2016) %>% #get 2016-2018 data
   group_by(country) %>%
-  slice_tail(n=3) %>%
-  summarise_if(is.numeric, mean) %>%
-  ungroup() %>%
-  rename(MeanYear=Year)
+  summarise_if(is.numeric, mean) %>% #means
+  ungroup()
 colnames(wsd.3yr.num)[2:26] <- paste(colnames(wsd.3yr.num)[2:26], "3yr", sep = "_") #add suffix
 
 
@@ -102,18 +103,23 @@ Mode <- function(x) {
 
 wsd.3yr.fac <- wsd %>% arrange(Year) %>%
   group_by(country) %>%
-  slice_tail(n=3) %>%
+  filter(Year >= 2016) %>% #get 2016-2018 data
   mutate(WorldBankIncomeClass = Mode(WorldBankIncomeClass),
          RegimeType = Mode(RegimeType),
-         WorldRegion=Mode(WorldRegion)) %>%
+         WorldRegion=Mode(WorldRegion),
+         nYears=n()) %>% #count how many years are being averaged for each country) %>%
   ungroup() %>%
-  select(country, WorldBankIncomeClass, RegimeType, WorldRegion) %>%
+  select(country, nYears, WorldBankIncomeClass, RegimeType, WorldRegion) %>%
   distinct()
 #n_unique(wsd.3yr.fac$country) #make sure no countries missing
-colnames(wsd.3yr.fac)[2:4] <- paste(colnames(wsd.3yr.fac)[2:4], "3yr", sep = "_") #add suffix
+colnames(wsd.3yr.fac)[2:5] <- paste(colnames(wsd.3yr.fac)[2:5], "3yr", sep = "_") #add suffix
 
-wsd.3yr <- merge(wsd.3yr.fac, wsd.3yr.num, by="country") #rejoin num and fac
+wsd.3yr <- merge(wsd.3yr.fac, wsd.3yr.num, by="country") %>% #rejoin num and fac
+    subset(Year_3yr==2017 && nYears_3yr==3) %>% # only keep countries that have data from 2016-2018
+    select(-Year_3yr, -nYears_3yr)
+nrow(wsd.3yr)
 ```
+Averaging across all years for every country with available data. 
 
 ```{r}
 # averages for numeric
@@ -143,22 +149,65 @@ colnames(wsd.avg.fac)[2:5] <- paste(colnames(wsd.avg.fac)[2:5], "avg", sep = "_"
 # #looks good!
 
 wsd.avg <- merge(wsd.avg.fac, wsd.avg.num, by="country") #rejoin num and fac
+table(as.factor(wsd.avg$nYears_avg)) # see yr frequencies
 ```
+
+As you can see from the frequency table above, only 60 countries have data for all 18 years. We could restrict this to only including the averages of countries with at least 15 yrs of data by uncommenting the chunk below (filters df down to 99 countries):
+
+```{r}
+# #uncomment to remove any countries that have less than 15 years worth of data
+# wsd.avg <- wsd.avg %>%
+#   subset(nYears_avg >= 15)
+# nrow(wsd.avg)
+```
+
+
+Change in each factor over 10 years (2008-2018)
 
 ```{r}
 # change in each parameter over 10 years - figure out how to find change in factors 
-wsd.change <- wsd %>% 
+
+# define function to get relative change
+rel.diff <- function(x) {(x - lag(x))/lag(x)} # define function to get relative change
+
+
+wsd.change.num <- wsd %>% 
   group_by(country) %>%
   arrange(Year) %>%
-  select_if(is.numeric)%>%
+  select_if(is.numeric)%>% # just dealing with numeric for now
   subset(Year==2018 | Year == 2008) %>%
-  #filter(row_number() == 1 | row_number() == n()) %>% #select first and last timepoint for each country - leads to inconsistent times
-  mutate_each(funs(c(NA,diff(.))))%>% #calculate change
+  filter(n() >= 2) %>% #make sure country has data for both years
+  mutate(across(where(is.numeric), ~rel.diff(.), .names="{.col}_rel.diff")) %>% # change normalized by baseline values
+  mutate(across(c(!ends_with("diff")), ~diff(.x), .names="{.col}_diff"))  %>%  #absolute change 
+  mutate_if(is.numeric, function(x) ifelse(is.infinite(x), 0, x)) %>% # change Inf values to 0
+  select(-Year, -Year_diff, -Year_rel.diff) %>%
+  drop_na() %>%
+  ungroup()
+
+#now factors
+wsd.change.fac <- wsd %>%
+  select(country, Year, WorldBankIncomeClass, RegimeType)
+# order factors
+wsd.change.fac$WorldBankIncomeClass <- factor(wsd.change.fac$WorldBankIncomeClass, levels=c("Low income", "Lower-middle income", "Upper-middle income", "High income"), ordered=TRUE)
+wsd.change.fac$RegimeType <- factor(wsd.change.fac$RegimeType, levels=c("Closed Autocracy", "Electoral Autocracy", "Electoral Democracy", "Liberal Democracy"), ordered=TRUE)
+
+wsd.change.fac <- wsd.change.fac %>% 
+  group_by(country) %>%
+  arrange(Year) %>%
+  subset(Year==2018 | Year == 2008) %>%
+  filter(n() >= 2) %>% #make sure country has data for both years
+  mutate(WorldBankIncomeClass_diff = unclass(WorldBankIncomeClass) - unclass(lag(WorldBankIncomeClass)),
+         WorldBankIncomeClass_rel.diff = rel.diff(unclass(WorldBankIncomeClass)),
+         RegimeType_diff = unclass(RegimeType) - unclass(lag(RegimeType)),
+         RegimeType_rel.diff = rel.diff(unclass(RegimeType))) %>% 
+  mutate_if(is.numeric, function(x) ifelse(is.infinite(x), 0, x)) %>% # change Inf values to 0
   select(-Year) %>%
   drop_na() %>%
   ungroup()
-colnames(wsd.change)[2:25] <- paste(colnames(wsd.change)[2:25], "diff", sep = "_") #add suffix
-#hist(wsd.change$Year)
+
+#now join and drop unnecessary columns used for calculations
+wsd.change <- merge(wsd.change.num, wsd.change.fac, by ="country") %>%
+  select(country, ends_with("diff"))
 ```
 
 Merge into one wide wsd dataframe:
@@ -176,6 +225,8 @@ wsd.sum.long <- wsd.sum.wide %>%
     names_sep = "_", 
     values_drop_na = TRUE
   )
+
+head(wsd.sum.wide)
 ```
 
 ## COVID Summary Values
@@ -213,7 +264,7 @@ vac_1_dose <- covid %>%
   mutate(days.to.1d_rel = as.numeric(difftime(date, min(date), units = "days")),
          days.to.1d_abs = as.numeric(difftime(date, "2020-12-01", units = "days"))) # setting Dec 1, 2020 as vaccine baseline to compare across vaccine events
 vac_1_dose[which.min(vac_1_dose$date),] #first country to get one dose per person
-
+#add rate (days relative to each countries own start of vaccinations)
 
 vac_2_doses <- covid %>%
   select(country, date, vaccine_dose_events) %>%
@@ -234,6 +285,7 @@ vac_50_df <- covid %>%
   mutate(days.to.50pct_rel = as.numeric(difftime(date, min(date), units = "days")),
          days.to.50pct_abs = as.numeric(difftime(date, "2020-12-01", units = "days")))
 
+#percent of ppl w/ 1 dose of vaccine as of mar 17 2022
 binned_vac <- covid %>%
   select(country, date, binned_people_vaccinated_per_hundred) %>%
   drop_na(binned_people_vaccinated_per_hundred) %>%
@@ -248,7 +300,7 @@ binned_vac <- covid %>%
 vac_rate <- covid %>%
   select(country, date, daily_vaccinations_per_million) %>%
   filter(daily_vaccinations_per_million > 0,
-         date <= "2021-07-01") %>% # daily vaccinations in 1st 6 mo
+         date <= "2021-07-01") %>% # daily vaccinations in 1st 6 mo - make relative to their own vaccine start date
   drop_na(daily_vaccinations_per_million) %>%
   group_by(country) %>%
   summarise(daily.vac.per.mil_6mo = mean(daily_vaccinations_per_million))
@@ -260,7 +312,7 @@ Note - can calculate proportinal covid cases, etc, once merged using `TotalPopul
 ``` {r}
 # cases & deaths at 1 yr mark (2021-01-22)
 covid_1yr <- covid %>%
-  subset(date == "2021-01-22")
+  subset(date == "2021-01-22") #change to deaths/cases prior to vaccine start, normed by pop!
 covid_1yr <- covid_1yr[, which(colMeans(!is.na(covid_1yr)) > 0.5)] #remove cols with NA > 50%
 #sum(is.na(covid_1yr$cumulative_total_cases))
 
@@ -289,7 +341,7 @@ covid_maxrate <- covid %>%
          monthly.new.cases_max = monthly_new_cases,
          monthly.new.deaths_max = monthly_new_deaths,
          weekly.new.cases_max = weekly_new_cases,
-         weekly.new.deaths_max = weekly_new_deaths,
+         weekly.new.deaths_max = weekly_new_deaths, # cap at pre-vaccine availability
          daily.vac.raw_max = daily_vaccinations_raw,
          daily.vac_max = daily_vaccinations,
          daily.vac.per.mil_max = daily_vaccinations_per_million) #using . and _ separators to match WSD in case we want to pivot long later
@@ -338,3 +390,14 @@ skim(mar22.wsd.wide)
 Any of the above can be recombined/merged further or pivoted long. Other dataframes that can be merged:
 * `covid_1yr` : cases & deaths at 1 yr mark (2021-01-22)
 * `wsd.sum.long` : long version of WSD summary data with `type` column indicating if data was from a specific year or timeperiod it's averaged over
+
+predict:
+days to vaccine access
+days from vaccine access to 50% ppl
+% ppl vaccinated at march 2022 (absolute counts and binned)
+doses administered at march 2022 (absolute counts and binned)
+
+
+
+
+
