--- a/COVID_Sustainability_Global.Rmd
+++ b/COVID_Sustainability_Global.Rmd
@@ -264,53 +264,63 @@ vac_info_2022 <- covid %>%
   filter(year == 2022) %>% # keep only countries who last reported in 2022 (as we are interested in a recent vaccination status)
   # filter(month_year == "2022-03-01") # could also filter for march 2022 specifically
   select(country, date, missing_vac_cols) %>% # keep only variables not yet included in last.timepoint
-  rename(date_last_vac = date)# rename the date to correspond to last reported vaccine info
+  rename(date.vac = date)# rename the date to correspond to last reported vaccine info
 
 # merge the last reported vaccination info with last reported cases/deaths info
 last.timepoint <- merge(last.timepoint, vac_info_2022, by = "country")
+colnames(last.timepoint)[2:28] <- paste(colnames(last.timepoint)[2:28], "last", sep = "_") #add suffix
+
 
 # #find date of vaccination events
 # table(covid$vaccination_events)
 # table(covid$vaccine_dose_events)
 # table(covid$binned_people_vaccinated_per_hundred)
 ```
-Vaccine outcomes
+
+Vaccine outcomes:
+NOTE - trying to extract the date that vaccinations started in each country doesn't yield accurate results since some countries were pretty far into vaccinating people before reporting. See comments below and the `vaccination_events  ` chunk in covid_EDA.Rmd.
 
 ```{r}
 # creating dfs of vaccination events - much of this is from covid_EDA.Rmd and can be removed/cleaned up once Rmds are merged!
-##dat vac start doesn't actually calculate - just earliest date that vaccines were reported but many countries dont have data until a while after starting, ie 70% pop is already vaccinated at day 1
+## date of vac_start doesn't actually mean the 1st day vaccines were given, just the first day a country reported and were in the process of giving vaccines!
+## many countries dont have data until a while after starting, ie 70% pop is already vaccinated at day 1
+
 vac_start_df <- covid %>%
   select(country, date, vaccination_events, binned_people_vaccinated_per_hundred, people_vaccinated) %>%
   filter(vaccination_events == "vac_start") %>%
   mutate(days.to.start_rel = as.numeric(difftime(date, min(date), units = "days")),
          days.to.start_abs = as.numeric(difftime(date, "2020-12-01", units = "days"))) %>%
   rename(date.first.vac = date)
-#adding date of first vaccination for each country to the covid df so it can be used as a baseline later - there may be a more elegant way of doing this but im tired
-vac_start_date <- vac_start_df %>% select(country, date.first.vac)
-covid <- full_join(covid, vac_start_date, by ="country")
+
+# adding date of first vaccination for each country to the covid df so it can be used as a baseline later -
+# vac_start_date <- vac_start_df %>% select(country, date.first.vac)
+# covid <- full_join(covid, vac_start_date, by ="country")
 
 vac_1_dose <- covid %>%
-  select(country, date, vaccine_dose_events, date.first.vac) %>%
+  select(country, date, vaccine_dose_events) %>% #date.first.vac
   filter(vaccine_dose_events == "1_dose")%>%
   mutate(days.to.1d_rel = as.numeric(difftime(date, min(date), units = "days")),
          days.to.1d_abs = as.numeric(difftime(date, "2020-12-01", units = "days")), # setting Dec 1, 2020 as vaccine baseline to compare across vaccine events
-         days.to.1d_fromstart = as.numeric(difftime(date, date.first.vac, units = "days"))) 
+         #days.to.1d_fromstart = as.numeric(difftime(date, date.first.vac, units = "days"))
+         ) 
 vac_1_dose[which.min(vac_1_dose$date),] #first country to get one dose per person
 
 vac_2_doses <- covid %>%
-  select(country, date, vaccine_dose_events, date.first.vac) %>%
+  select(country, date, vaccine_dose_events) %>% #date.first.vac
   filter(vaccine_dose_events == "2_doses")%>%
   mutate(days.to.2d_rel = as.numeric(difftime(date, min(date), units = "days")),
          days.to.2d_abs = as.numeric(difftime(date, "2020-12-01", units = "days")),
-         days.to.2d_fromstart = as.numeric(difftime(date, date.first.vac, units = "days")))
+         #days.to.2d_fromstart = as.numeric(difftime(date, date.first.vac, units = "days"))
+         )
 vac_2_doses[which.min(vac_2_doses$date),] #first country to hit 2 doses
 
 vac_50_df <- covid %>%
-  select(country, date, vaccination_events, date.first.vac) %>%
+  select(country, date, vaccination_events) %>% #date.first.vac
   filter(vaccination_events == "vac_50pct") %>%
   mutate(days.to.50pct_rel = as.numeric(difftime(date, min(date), units = "days")),
          days.to.50pct_abs = as.numeric(difftime(date, "2020-12-01", units = "days")),
-         days.to.50pct_fromstart = as.numeric(difftime(date, date.first.vac, units = "days")))
+         #days.to.50pct_fromstart = as.numeric(difftime(date, date.first.vac, units = "days"))
+         )
 
 #percent of ppl w/ 1 dose of vaccine as of mar 17 2022
 binned_vac <- covid %>%
@@ -325,60 +335,59 @@ binned_vac <- covid %>%
 #n_unique(binned_vac$country) #no countries lost
 
 vac_rate <- covid %>%
-  select(country, date, daily_vaccinations_per_million, date.first.vac) %>%
+  select(country, date, daily_vaccinations_per_million) %>% #date.first.vac
   filter(daily_vaccinations_per_million > 0,
-         date <= (date.first.vac %m+% months(6))) %>% # daily vaccinations in 1st 6 mo - make relative to their own vaccine start date
-  drop_na(daily_vaccinations_per_million) %>%
+         # date <= (date.first.vac %m+% months(6))) %>% # daily vaccinations in 1st 6 mo - make relative to their own vaccine start date
+         date <= "2021-06-30") %>% #daily vaccinations in 1st 6 mo. of 2021 - best i could think to do w/o accurate vaccine start dates
+  drop_na(daily_vaccinations_per_million) %>% 
   group_by(country) %>%
   summarise(daily.vac.per.mil_6mo = mean(daily_vaccinations_per_million))
 ```
 
 ``` {r}
-# cases & deaths pre-vaccines
+# cases & deaths (couldn't subset to prevaccines in each country, see above)
 covid_prevac <- covid %>%
   group_by(country) %>%
-  subset(date < date.first.vac) %>%
+  subset(date < mean(vac_start_df$date.first.vac)) %>% #setting mean of all reported vac_start days ~ don't love it but maybe in aggregate they're representative
   arrange(country,date) %>%
   slice_tail(n=1) %>%
-  ungroup()
-covid_prevac <- covid_prevac[, which(colMeans(!is.na(covid_prevac)) > 0.5)] #remove cols with NA > 50%
+  ungroup() %>%
+  select("country"| contains("case") | contains("death"))
+colnames(covid_prevac)[2:19] <- paste(colnames(covid_prevac)[2:19], "prevac", sep = "_") #add suffix
+
 
 # cases & deaths at 1 yr mark (2021-01-22)
 covid_1yr <- covid %>%
-  subset(date == "2021-01-22") #change to deaths/cases prior to vaccine start, normed by pop!
-covid_1yr <- covid_1yr[, which(colMeans(!is.na(covid_1yr)) > 0.5)] #remove cols with NA > 50%
+  subset(date == "2021-01-22") %>%
+  select("country"| contains("case") | contains("death"))
+colnames(covid_1yr)[2:19] <- paste(colnames(covid_1yr)[2:19], "1yr", sep = "_") #add suffix
+#covid_1yr <- covid_1yr[, which(colMeans(!is.na(covid_1yr)) > 0.5)] #remove cols with NA > 50%
 #sum(is.na(covid_1yr$cumulative_total_cases))
 
-covid.1yr_cum <- covid_1yr %>%
-  select(country, cumulative_total_cases, cumulative_total_deaths, binned_people_vaccinated_per_hundred) %>%
-  rename(cum.cases_1yr = cumulative_total_cases,
-         cum.deaths_1yr = cumulative_total_deaths,
-         bin.ppl.vac.per100_1yr = binned_people_vaccinated_per_hundred)
-
-#cases & deaths march 17, 2022
-covid.final_cum <- last.timepoint %>%
-  select(country, cumulative_total_cases, cumulative_total_deaths, binned_people_vaccinated_per_hundred) %>%
-  rename(cum.cases_final = cumulative_total_cases,
-         cum.deaths_final = cumulative_total_deaths,
-         bin.ppl.vac.per100_final = binned_people_vaccinated_per_hundred) #using . and _ separators to match WSD in case we want to pivot long later
+# covid.1yr_cum <- covid_1yr %>%
+#   select(country, cumulative_total_cases, cumulative_total_deaths, binned_people_vaccinated_per_hundred) %>%
+#   rename(cum.cases_1yr = cumulative_total_cases,
+#          cum.deaths_1yr = cumulative_total_deaths,
+#          bin.ppl.vac.per100_1yr = binned_people_vaccinated_per_hundred)
 
 #peak rates
 covid_maxrate <- covid %>%
+  subset(date < mean(vac_start_df$date.first.vac)) %>% #setting mean of all reported vac_start days ~ don't love it but maybe in aggregate they're representative
   select("country" | contains("new") | contains("daily")) %>%
   group_by(country) %>%
   mutate_if(is.numeric, ~replace(., is.na(.), -1)) %>% #temporarily replace na's with -1
   summarise_if(is.numeric, max) %>%
   na_if(-1) %>% #set -1's back to na
-  rename(daily.new.cases_max = daily_new_cases,
-         daily.new.deaths_max = daily_new_deaths,
-         monthly.new.cases_max = monthly_new_cases,
-         monthly.new.deaths_max = monthly_new_deaths,
-         weekly.new.cases_max = weekly_new_cases,
-         weekly.new.deaths_max = weekly_new_deaths, # cap at pre-vaccine availability
+  rename(daily.new.cases.per.100_max = daily_new_cases_per_hundred,
+         daily.new.deaths.per.100_max = daily_new_deaths_per_hundred,
+         monthly.new.cases.per.100_max = monthly_new_cases_per_hundred,
+         monthly.new.deaths.per.100_max = monthly_new_deaths_per_hundred,
+         weekly.new.cases.per.100_max = weekly_new_cases_per_hundred,
+         weekly.new.deaths.per.100_max = weekly_new_deaths_per_hundred, # cap at pre-vaccine availability
          daily.vac.raw_max = daily_vaccinations_raw,
          daily.vac_max = daily_vaccinations,
          daily.vac.per.mil_max = daily_vaccinations_per_million) #using . and _ separators to match WSD in case we want to pivot long later
-#n_unique(covid_maxrate$country) #no countries lost
+#n_unique(covid_maxrate$country) #one country lost filtering to pre "2021-02-20"
 
 ```
 
@@ -390,40 +399,57 @@ Now let's merge all these vaccination dfs into one dataframe we can try to predi
 vac.df_list <- list(vac_1_dose, vac_2_doses, vac_start_df, vac_50_df, binned_vac)
 #drop date and event info since this is contained in col names
 for (i in 1:length(vac.df_list)) {
-  vac.df_list[[i]] <- vac.df_list[[i]] %>% select(-c("date", contains("events")))
+  vac.df_list[[i]] <- vac.df_list[[i]] %>% select(-c(contains("date"), contains("events")))
 }
 vac.df_list[[length(vac.df_list)+1]] <- vac_rate
 
 vac.sum.wide <- vac.df_list %>% reduce(full_join, by='country') %>% as.data.frame() #join
 ```
+
 Merging case & death dfs
 
 ```{r}
 #df for cases and deaths
-case.df_list <- list(covid.1yr_cum, covid.final_cum, covid_maxrate)
+case.df_list <- list(covid_prevac, covid_1yr, covid_maxrate)
 case.sum.wide <- case.df_list %>% reduce(full_join, by='country') %>% as.data.frame() #join
 skim(case.sum.wide)
 ```
+
+Merge all COVID summary data
+
+```{r}
+covid.df_list <- list(case.sum.wide, vac.sum.wide, last.timepoint)
+covid.all <- covid.df_list %>% reduce(full_join, by='country') %>% as.data.frame() #join
+n_unique(covid.all$country)
+skim(covid.all)
+
+# c1 <-unique(covid$country)
+# c2 <- unique(covid.all$country)
+#setdiff(c1, c2)
+#Palau dropped from summary data - ok since it's not in WSD anyway
+```
+
 
 ## Merge! Merge! Merge!
 
 ``` {r}
 #merging WSD predictors with vaccination summary data
 vac.wsd.wide <- inner_join(vac.sum.wide, wsd.sum.wide, by="country")
-skim(vac.wsd.wide)
+#skim(vac.wsd.wide)
 
 #merging WSD predictors with cases, deaths & maxrate data
 case.wsd.wide <- inner_join(case.sum.wide, wsd.sum.wide, by="country")
-skim(case.wsd.wide)
+#skim(case.wsd.wide)
 
-#merging WSD predictors with data as of March 17, 2022 with at least 50% completion
+#merging WSD predictors with latest COVID data (~March 17, 2022)
 mar22.wsd.wide <- inner_join(last.timepoint, wsd.sum.wide, by="country")
-skim(mar22.wsd.wide)
+#skim(mar22.wsd.wide)
+
+#merging everything!
+wsd.covid.all <- inner_join()
 ```
 
-Any of the above can be recombined/merged further or pivoted long. Other dataframes that can be merged:
-* `covid_1yr` : cases & deaths at 1 yr mark (2021-01-22)
-* `wsd.sum.long` : long version of WSD summary data with `type` column indicating if data was from a specific year or timeperiod it's averaged over
+Any of the above can be recombined/merged further or pivoted long.
 
 predict:
 days to vaccine access
